# cf-offboard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  CPP_GUIDELINES.md  DEPENDENCIES.md  KNOWN_ISSUES.md  LOGGING.md  MISSION_FIRST_FLIGHT.md  MISSION_OBSTACLE_FORWARD.md  PERCEPTION.md  README.md  RERUN.md  TUI.md  claude_multiranger_prompt.txt
scripts/: bootstrap_vendor.sh
src/app/: config.hpp  main.cpp
src/control/: control_loop.cpp  control_loop.hpp  manual_hlc.cpp  manual_hlc.hpp  types.hpp
src/crazyflie/link/: interfaces.hpp  link.cpp  types.hpp
src/crazyflie/log/: log_session.cpp  log_session.hpp
src/crazyflie/param/: param_session.cpp  param_session.hpp
src/crazyflie/protocol/: protocol.hpp  types.hpp
src/logging/: console.cpp  console.hpp  mcap_logger.cpp  mcap_logger.hpp  types.hpp
src/mission/: mission.cpp  mission.hpp  types.hpp
src/perception/: perception.cpp  perception.hpp  types.hpp
src/rerun_sink/: rerun_sink.cpp  rerun_sink.hpp
src/safety/: safety.hpp  types.hpp
src/state/: state.cpp  state_store.hpp  types.hpp
src/ui/: tui.cpp  tui.hpp  types.hpp
tests/: doctest_main.cpp  link_compile_check.cpp  test_log_protocol.cpp  test_manual_hlc.cpp  test_mission.cpp  test_perception.cpp  test_protocol.cpp  test_safety.cpp  test_setpoint.cpp  test_state.cpp
tools/: cfo_inspect.cpp
